--- a/client/styles.css
+++ b/client/styles.css
@@ -19,6 +19,7 @@
 	color: white;
 	font-size: 20px;
 	font-weight: bold;
+	cursor: pointer;
 }
 #dislike {
 	height: 60px;
@@ -29,6 +30,7 @@
 	color: white;
 	font-size: 20px;
 	font-weight: bold;
+	cursor: pointer;
 }
 #like_count,
 #dislike_count {
